--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,1 +1,9 @@
-@import './utils/_variables';
+@import './base/borderbox';
+@import './base/typography';
+@import './utils/variables';
+@import './utils/mixins';
+@import './pages/home';
+@import './layout/header';
+@import './components/buttons'
+
+
