réalisation de la partie fonctionnement

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,4 +1,4 @@
-@import './base/borderbox';
+@import './base/base';
 @import './base/typography';
 @import './utils/variables';
 @import './utils/mixins';
