--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -3,3 +3,9 @@ $color-secondary: #FF79DA;
 $color-tertiary: #99E2D0;
 $medium-gray: rgba(228, 228, 228, 0.741);
 $light-gray: rgba(241, 241, 241, 0.476);
+$dark-gray: rgb(62, 62, 62);
+$icon-gray: rgb(120, 120, 120);
+
+// Font Size, Margins //
+
+$h2-size: 1.4em;
