--- a/public/css/main.css
+++ b/public/css/main.css
@@ -3,9 +3,6 @@
 body {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
-}
-
-body {
   font-family: 'Roboto', sans-serif;
 }
 
@@ -83,7 +80,7 @@ body {
 .call-to-action h2 {
   margin-top: 40px;
   margin-bottom: 0;
-  font-size: 1.3em;
+  font-size: 1.4em;
   width: 60%;
   text-align: center;
 }
@@ -94,8 +91,167 @@ body {
   margin-bottom: 25px;
 }
 
-.call-to-action a {
-  margin-bottom: 25px;
+.call-to-action form {
+  margin-bottom: 45px;
+}
+
+.fonctionnement-block {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  margin: 0 1.5em;
+}
+
+.fonctionnement-block h2 {
+  font-size: 1.4em;
+}
+
+.fonctionnement-block_restaurant {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  position: relative;
+  border-radius: 25px;
+  background-color: rgba(228, 228, 228, 0.741);
+  margin-bottom: 1em;
+  cursor: pointer;
+  -webkit-transition: background-color 500ms;
+  transition: background-color 500ms;
+  -webkit-box-shadow: 3px 4px 6px #cecece;
+          box-shadow: 3px 4px 6px #cecece;
+}
+
+.fonctionnement-block_restaurant span {
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
+  padding-left: 40px;
+  color: #787878;
+  font-size: 20px;
+}
+
+.fonctionnement-block_restaurant p {
+  padding: 12px 25px;
+  font-weight: 500;
+}
+
+.fonctionnement-block_restaurant:hover {
+  background-color: #e7daf5;
+}
+
+.fonctionnement-block_restaurant:hover span {
+  color: #9356DC;
+}
+
+.fonctionnement-block_restaurant::before {
+  content: "1";
+  background-color: #9356DC;
+  color: #fff;
+  border-radius: 50%;
+  position: absolute;
+  bottom: 25px;
+  left: -11px;
+  padding: 3px 7px;
+}
+
+.fonctionnement-block_menu {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  position: relative;
+  border-radius: 25px;
+  background-color: rgba(228, 228, 228, 0.741);
+  margin-bottom: 1em;
+  cursor: pointer;
+  -webkit-transition: background-color 500ms;
+  transition: background-color 500ms;
+  -webkit-box-shadow: 3px 4px 6px #cecece;
+          box-shadow: 3px 4px 6px #cecece;
+}
+
+.fonctionnement-block_menu span {
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
+  padding-left: 40px;
+  color: #787878;
+  font-size: 20px;
+}
+
+.fonctionnement-block_menu p {
+  padding: 12px 25px;
+  font-weight: 500;
+}
+
+.fonctionnement-block_menu:hover {
+  background-color: #e7daf5;
+}
+
+.fonctionnement-block_menu:hover span {
+  color: #9356DC;
+}
+
+.fonctionnement-block_menu::before {
+  content: "2";
+  background-color: #9356DC;
+  color: #fff;
+  border-radius: 50%;
+  position: absolute;
+  bottom: 25px;
+  left: -11px;
+  padding: 3px 7px;
+}
+
+.fonctionnement-block_degustez {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  position: relative;
+  border-radius: 25px;
+  background-color: rgba(228, 228, 228, 0.741);
+  margin-bottom: 1em;
+  cursor: pointer;
+  -webkit-transition: background-color 500ms;
+  transition: background-color 500ms;
+  -webkit-box-shadow: 3px 4px 6px #cecece;
+          box-shadow: 3px 4px 6px #cecece;
+}
+
+.fonctionnement-block_degustez span {
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
+  padding-left: 40px;
+  color: #787878;
+  font-size: 20px;
+}
+
+.fonctionnement-block_degustez p {
+  padding: 12px 25px;
+  font-weight: 500;
+}
+
+.fonctionnement-block_degustez:hover {
+  background-color: #e7daf5;
+}
+
+.fonctionnement-block_degustez:hover span {
+  color: #9356DC;
+}
+
+.fonctionnement-block_degustez::before {
+  content: "3";
+  background-color: #9356DC;
+  color: #fff;
+  border-radius: 50%;
+  position: absolute;
+  bottom: 25px;
+  left: -11px;
+  padding: 3px 7px;
 }
 
 header {
@@ -121,7 +277,21 @@ header h1 {
   background: linear-gradient(171deg, #ff79da 0%, #9356dc 85%);
   border-radius: 30px;
   border: none;
-  opacity: 0.9;
+  opacity: 1;
   cursor: pointer;
+  -webkit-box-shadow: 3px 4px 6px #cecece;
+          box-shadow: 3px 4px 6px #cecece;
+  -webkit-transition: opacity 500ms;
+  transition: opacity 500ms;
+  -webkit-transition: -webkit-box-shadow 1s;
+  transition: -webkit-box-shadow 1s;
+  transition: box-shadow 1s;
+  transition: box-shadow 1s, -webkit-box-shadow 1s;
+}
+
+.btn:hover {
+  opacity: 0.85;
+  -webkit-box-shadow: 5px 6px 8px #aeaeae;
+          box-shadow: 5px 6px 8px #aeaeae;
 }
 /*# sourceMappingURL=main.css.map */
