--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -4,6 +4,13 @@
     background: linear-gradient(171deg, rgba(255,121,218,1) 0%, rgba(147,86,220,1) 85%);
     border-radius: 30px;
     border: none;
-    opacity: 0.9;
+    opacity: 1;
     cursor: pointer;
+    @include box-shadow;
+    transition: opacity 500ms;
+    transition: box-shadow 1s;
+    &:hover {
+        opacity: 0.85;
+        @include box-shadow-hover;
+        }
 }
