--- a/sass/utils/_mixins.scss
+++ b/sass/utils/_mixins.scss
@@ -3,3 +3,33 @@
     align-items: center;
     justify-content: center;
 }
+
+@mixin fonctionnement-choice {
+    display: flex;
+    position: relative;
+    border-radius: 25px;
+    background-color: $medium-gray;
+    margin-bottom: 1em;
+    cursor: pointer;
+    transition: background-color 500ms;
+
+}
+
+@mixin fonctionnement-numbers {
+    background-color: $color-primary;
+    color: #fff;
+    border-radius: 50%;
+    position: absolute;
+    bottom: 25px;
+    left: -11px;
+    padding: 3px 7px;
+}
+
+@mixin box-shadow {
+    box-shadow: 3px 4px 6px rgb(206, 206, 206);
+}
+
+@mixin box-shadow-hover {
+    box-shadow: 5px 6px 8px rgb(174, 174, 174);
+
+}
