--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -1,5 +1,12 @@
 body {
     box-sizing: border-box;
     font-family: 'Roboto', sans-serif;
+    a {
+        text-decoration: none;
+        color: inherit;
+    }
+    img {
+        object-fit: cover;
+    }
 }
 
