--- a/css/main.css
+++ b/css/main.css
@@ -333,11 +333,35 @@ body img {
   margin: 10px 0 0 20px;
 }
 
-.card__content span {
+.card__content .far {
   position: absolute;
   right: 20px;
   top: 20px;
-  font-size: 25px;
+  font-size: 23px;
+  color: rgba(19, 19, 19, 0.877);
+}
+
+.card__content .fas {
+  position: absolute;
+  right: 20px;
+  top: 20px;
+  font-size: 23px;
+  color: transparent;
+  -webkit-transform: scale(0.8);
+          transform: scale(0.8);
+  -webkit-transition: -webkit-transform 500ms;
+  transition: -webkit-transform 500ms;
+  transition: transform 500ms;
+  transition: transform 500ms, -webkit-transform 500ms;
+}
+
+.card__content .fas:hover {
+  background-image: -webkit-gradient(linear, left bottom, left top, color-stop(30%, #ff79da), color-stop(89%, #9356dc));
+  background-image: linear-gradient(0deg, #ff79da 30%, #9356dc 89%);
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-transform: scale(1);
+          transform: scale(1);
 }
 
 header {
