--- a/css/main.css
+++ b/css/main.css
@@ -294,6 +294,17 @@ body img {
   height: 250px;
   background-color: #fff;
   border-radius: 25px;
+  -webkit-box-shadow: 3px 4px 6px #cecece;
+          box-shadow: 3px 4px 6px #cecece;
+  -webkit-transform: scale(1);
+          transform: scale(1);
+  -webkit-transition: 400ms ease-in-out;
+  transition: 400ms ease-in-out;
+}
+
+.card:hover {
+  -webkit-transform: scale(1.02);
+          transform: scale(1.02);
 }
 
 .card__img {
@@ -371,8 +382,8 @@ body img {
 }
 
 .card__content span:hover .fas {
-  background-image: -webkit-gradient(linear, left bottom, left top, color-stop(30%, #ff79da), color-stop(89%, #9356dc));
-  background-image: linear-gradient(0deg, #ff79da 30%, #9356dc 89%);
+  background: -webkit-gradient(linear, left bottom, left top, color-stop(30%, #ff79da), color-stop(89%, #9356dc));
+  background: linear-gradient(0deg, #ff79da 30%, #9356dc 89%);
   background-clip: text;
   -webkit-background-clip: text;
   -webkit-transform: scale(1);
