--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 @import url("https://fonts.googleapis.com/css2?family=Shrikhand&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap");
 body {
@@ -19,31 +18,111 @@ body img {
 
 @-webkit-keyframes menu-appear {
   0% {
-    -webkit-transform: translateY(-50px);
-            transform: translateY(-50px);
-    -webkit-transform: opacity(0);
-            transform: opacity(0);
+    -webkit-transform: translateY(50px);
+            transform: translateY(50px);
+    opacity: 0;
+  }
+  50% {
+    opacity: 0;
   }
   100% {
     -webkit-transform: translateY(0);
             transform: translateY(0);
-    -webkit-transform: opacity(1);
-            transform: opacity(1);
+    opacity: 1;
   }
 }
 
 @keyframes menu-appear {
   0% {
-    -webkit-transform: translateY(-50px);
-            transform: translateY(-50px);
-    -webkit-transform: opacity(0);
-            transform: opacity(0);
+    -webkit-transform: translateY(50px);
+            transform: translateY(50px);
+    opacity: 0;
+  }
+  50% {
+    opacity: 0;
   }
   100% {
     -webkit-transform: translateY(0);
             transform: translateY(0);
-    -webkit-transform: opacity(1);
-            transform: opacity(1);
+    opacity: 1;
+  }
+}
+
+@-webkit-keyframes loader-disappear {
+  0% {
+    opacity: 0.8;
+    z-index: 2;
+  }
+  100% {
+    opacity: 0;
+    z-index: -1;
+  }
+}
+
+@keyframes loader-disappear {
+  0% {
+    opacity: 0.8;
+    z-index: 2;
+  }
+  100% {
+    opacity: 0;
+    z-index: -1;
+  }
+}
+
+@-webkit-keyframes text-pop-up-top {
+  0% {
+    -webkit-transform: translateY(0);
+            transform: translateY(0);
+    -webkit-transform-origin: 50% 50%;
+            transform-origin: 50% 50%;
+    text-shadow: none;
+  }
+  100% {
+    -webkit-transform: translateY(-100px);
+            transform: translateY(-100px);
+    -webkit-transform-origin: 50% 50%;
+            transform-origin: 50% 50%;
+    text-shadow: 0 1px 0 #ccc, 0 2px 0 #ccc, 0 3px 0 #ccc, 0 4px 0 #ccc, 0 5px 0 #ccc, 0 6px 0 #ccc, 0 7px 0 #ccc, 0 8px 0 #ccc, 0 9px 0 #ccc, 0 50px 30px rgba(0, 0, 0, 0.3);
+  }
+}
+
+@keyframes text-pop-up-top {
+  0% {
+    -webkit-transform: translateY(0);
+            transform: translateY(0);
+    -webkit-transform-origin: 50% 50%;
+            transform-origin: 50% 50%;
+    text-shadow: none;
+  }
+  100% {
+    -webkit-transform: translateY(-100px);
+            transform: translateY(-100px);
+    -webkit-transform-origin: 50% 50%;
+            transform-origin: 50% 50%;
+    text-shadow: 0 1px 0 #ccc, 0 2px 0 #ccc, 0 3px 0 #ccc, 0 4px 0 #ccc, 0 5px 0 #ccc, 0 6px 0 #ccc, 0 7px 0 #ccc, 0 8px 0 #ccc, 0 9px 0 #ccc, 0 50px 30px rgba(0, 0, 0, 0.3);
+  }
+}
+
+@-webkit-keyframes fx {
+  50% {
+    -webkit-transform: scale(1);
+            transform: scale(1);
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+
+@keyframes fx {
+  50% {
+    -webkit-transform: scale(1);
+            transform: scale(1);
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
   }
 }
 
@@ -434,12 +513,12 @@ body {
 
 img {
   width: 100%;
-  height: 350px;
+  height: 50vh;
   position: relative;
   z-index: -1;
 }
 
-.main-restaurant-française {
+.main-restaurant {
   background-color: #f6f6f6;
   position: relative;
   bottom: 60px;
@@ -453,11 +532,11 @@ img {
           flex-direction: column;
 }
 
-.main-restaurant-française .main-title {
+.main-restaurant .main-title {
   padding-top: 30px;
 }
 
-.main-restaurant-française h2 {
+.main-restaurant h2 {
   font-family: 'Shrikhand', cursive;
   font-size: 1.6em;
   font-weight: 500;
@@ -465,21 +544,22 @@ img {
   margin-top: 0;
 }
 
-.main-restaurant-française .heart-block {
+.main-restaurant .heart-block {
   position: absolute;
   right: 40px;
   top: 32px;
   display: inline-block;
   width: 25px;
   height: 25px;
+  cursor: pointer;
 }
 
-.main-restaurant-française .heart-block .far {
+.main-restaurant .heart-block .far {
   font-size: 23px;
   opacity: 0.7;
 }
 
-.main-restaurant-française .heart-block .fas {
+.main-restaurant .heart-block .fas {
   bottom: 0.2px;
   font-size: 23px;
   color: transparent;
@@ -491,7 +571,7 @@ img {
   transition: transform 700ms ease-in-out, -webkit-transform 700ms ease-in-out;
 }
 
-.main-restaurant-française .heart-block:hover .far {
+.main-restaurant .heart-block:hover .far {
   background: -webkit-gradient(linear, left bottom, left top, color-stop(30%, #ff79da), color-stop(89%, #9356dc));
   background: linear-gradient(0deg, #ff79da 30%, #9356dc 89%);
   background-clip: text;
@@ -499,7 +579,7 @@ img {
   -webkit-text-fill-color: transparent;
 }
 
-.main-restaurant-française .heart-block:hover .fas {
+.main-restaurant .heart-block:hover .fas {
   background: -webkit-gradient(linear, left bottom, left top, color-stop(30%, #ff79da), color-stop(89%, #9356dc));
   background: linear-gradient(0deg, #ff79da 30%, #9356dc 89%);
   background-clip: text;
@@ -508,64 +588,174 @@ img {
           transform: scale(1);
 }
 
-.main-restaurant-française h3 {
+.main-restaurant h3 {
   margin-left: 4%;
   font-size: 1em;
   font-weight: normal;
   color: #3e3e3e;
 }
 
-.main-restaurant-française h3 .h3-border {
+.main-restaurant h3 .h3-border {
   border-bottom: 3px solid #99E2D0;
 }
 
-.main-restaurant-française .menu-meal {
+.main-restaurant .menu-formula {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.main-restaurant .menu-meal {
   background-color: #fff;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: reverse;
+      -ms-flex-direction: row-reverse;
+          flex-direction: row-reverse;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  margin-left: 4%;
+  margin-right: 4%;
+  margin-bottom: 15px;
+  border-radius: 15px;
+  overflow: hidden;
+  -webkit-box-shadow: 3px 4px 6px #cecece;
+          box-shadow: 3px 4px 6px #cecece;
+  position: relative;
+  cursor: pointer;
+}
+
+.main-restaurant .menu-meal:nth-child(1) {
+  -webkit-animation: menu-appear 2s both;
+          animation: menu-appear 2s both;
+  -webkit-animation-delay: 0.75s;
+          animation-delay: 0.75s;
+}
+
+.main-restaurant .menu-meal:nth-child(2) {
+  -webkit-animation: menu-appear 2s both;
+          animation: menu-appear 2s both;
+  -webkit-animation-delay: 0.60s;
+          animation-delay: 0.60s;
+}
+
+.main-restaurant .menu-meal:nth-child(3) {
+  -webkit-animation: menu-appear 2s both;
+          animation: menu-appear 2s both;
+  -webkit-animation-delay: 0.45s;
+          animation-delay: 0.45s;
+}
+
+.main-restaurant .menu-meal:nth-child(4) {
+  -webkit-animation: menu-appear 2s both;
+          animation: menu-appear 2s both;
+  -webkit-animation-delay: 0.30s;
+          animation-delay: 0.30s;
+}
+
+.main-restaurant .menu-meal:nth-child(5) {
+  -webkit-animation: menu-appear 2s both;
+          animation: menu-appear 2s both;
+  -webkit-animation-delay: 0.15s;
+          animation-delay: 0.15s;
+}
+
+.main-restaurant .menu-meal__check {
+  background: #99E2D0;
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
+  margin-right: -2.8em;
+  margin-left: 0.5em;
+  padding: 0.9em;
+  font-size: 1.5em;
+  color: white;
+  -webkit-transition: margin-right 400ms linear;
+  transition: margin-right 400ms linear;
+}
+
+.main-restaurant .menu-meal__check .fas {
+  -webkit-transform: rotate(0deg);
+          transform: rotate(0deg);
+  -webkit-transition: -webkit-transform 0.4s linear;
+  transition: -webkit-transform 0.4s linear;
+  transition: transform 0.4s linear;
+  transition: transform 0.4s linear, -webkit-transform 0.4s linear;
+}
+
+.main-restaurant .menu-meal:hover > .menu-meal__check {
+  margin-right: 0;
+}
+
+.main-restaurant .menu-meal:hover > .menu-meal__check > .fas {
+  -webkit-transform: rotate(360deg);
+          transform: rotate(360deg);
+}
+
+.main-restaurant .menu-meal .menu-meal__text {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
+  margin-left: 4%;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  margin-right: 2%;
+}
+
+.main-restaurant .menu-meal .menu-meal__title {
+  width: 100%;
+}
+
+.main-restaurant .menu-meal .menu-meal__title h4 {
+  margin-bottom: 0px;
+  margin-top: 12px;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
+}
+
+.main-restaurant .menu-meal .menu-meal__price {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  -webkit-box-align: end;
-      -ms-flex-align: end;
-          align-items: flex-end;
-  margin-left: 4%;
-  margin-right: 4%;
-  margin-bottom: 15px;
-  border-radius: 15px;
-  -webkit-box-shadow: 3px 4px 6px #cecece;
-          box-shadow: 3px 4px 6px #cecece;
-  position: relative;
-  -webkit-animation: menu-appear 3s;
-          animation: menu-appear 3s;
 }
 
-.main-restaurant-française .menu-meal .menu-meal_text {
-  width: 70%;
-  margin-left: 4%;
-}
-
-.main-restaurant-française .menu-meal .menu-meal_text h4 {
-  margin-bottom: 8px;
-  margin-top: 12px;
-}
-
-.main-restaurant-française .menu-meal .menu-meal_text p {
+.main-restaurant .menu-meal .menu-meal__price p {
   opacity: 0.8;
-  margin-top: 0;
+  margin-top: 10px;
   margin-bottom: 12px;
 }
 
-.main-restaurant-française .menu-meal .menu-meal_price {
-  font-weight: 500;
-  font-size: 1em;
-  position: absolute;
-  right: 20px;
-  bottom: 15px;
+.main-restaurant .menu-meal .menu-meal__price .subheading {
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
+  padding-right: 10px;
 }
 
-.main-restaurant-française .btn-center {
+.main-restaurant .menu-meal .menu-meal__price .moving-price {
+  font-weight: 500;
+}
+
+.main-restaurant .btn-center {
   -ms-flex-item-align: center;
       -ms-grid-row-align: center;
       align-self: center;
@@ -573,7 +763,7 @@ img {
   margin-bottom: 2.5em;
 }
 
-.main-restaurant-française .btn-center .btn {
+.main-restaurant .btn-center .btn {
   padding: 0.8em 3em;
 }
 
@@ -645,5 +835,78 @@ footer p i {
   opacity: 0.85;
   -webkit-box-shadow: 5px 6px 8px #aeaeae;
           box-shadow: 5px 6px 8px #aeaeae;
+}
+
+.loading-spinner {
+  background-color: #9356DC;
+  height: 100vh;
+  width: 100%;
+  position: fixed;
+  inset: 0;
+  z-index: 2;
+  opacity: 0.8;
+  -webkit-animation: loader-disappear 4s 2s ease-in-out forwards;
+          animation: loader-disappear 4s 2s ease-in-out forwards;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.loading-spinner p {
+  font-family: 'Shrikhand', cursive;
+  font-size: 3em;
+  margin-top: 15vh;
+  margin-bottom: 0;
+  -webkit-animation: text-pop-up-top 3s forwards;
+          animation: text-pop-up-top 3s forwards;
+  position: fixed;
+  z-index: 4;
+  opacity: 1;
+}
+
+.loading-spinner .container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  position: fixed;
+  margin-top: 15vh;
+  z-index: 3;
+}
+
+.loading-spinner .dot {
+  width: 15px;
+  height: 15px;
+  border: 3px solid #99E2D0;
+  border-radius: 50%;
+  margin: 0 10px;
+  -webkit-transform: scale(0);
+          transform: scale(0);
+  -webkit-animation: fx 1200ms ease infinite 1000ms;
+  animation: fx 1200ms ease infinite 1000ms;
+}
+
+.loading-spinner .dot:nth-child(2) {
+  -webkit-animation: fx 1200ms ease infinite 1400ms;
+  animation: fx 1200ms ease infinite 1400ms;
+}
+
+.loading-spinner .dot:nth-child(3) {
+  -webkit-animation: fx 1200ms ease infinite 1800ms;
+  animation: fx 1200ms ease infinite 1800ms;
+}
+
+.text-pop-up-top {
+  -webkit-animation: text-pop-up-top 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
+          animation: text-pop-up-top 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
 }
 /*# sourceMappingURL=main.css.map */
