--- a/css/main.css
+++ b/css/main.css
@@ -1,9 +1,12 @@
+@charset "UTF-8";
 @import url("https://fonts.googleapis.com/css2?family=Shrikhand&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap");
 body {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
   font-family: 'Roboto', sans-serif;
+  min-width: 350px;
+  max-width: 1280px;
 }
 
 body a {
@@ -195,7 +198,7 @@ body img {
       -ms-flex-direction: column;
           flex-direction: column;
   background-color: #f6f6f6;
-  margin-bottom: 3em;
+  margin-bottom: 2em;
 }
 
 .call-to-action h2 {
@@ -232,7 +235,7 @@ body img {
   font-size: 1.4em;
 }
 
-.fonctionnement-block_restaurant {
+.fonctionnement-block .fonctionnement-steps__restaurant {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -247,7 +250,7 @@ body img {
           box-shadow: 3px 4px 6px #cecece;
 }
 
-.fonctionnement-block_restaurant span {
+.fonctionnement-block .fonctionnement-steps__restaurant span {
   -ms-flex-item-align: center;
       -ms-grid-row-align: center;
       align-self: center;
@@ -256,20 +259,20 @@ body img {
   font-size: 20px;
 }
 
-.fonctionnement-block_restaurant p {
+.fonctionnement-block .fonctionnement-steps__restaurant p {
   padding: 12px 25px;
   font-weight: 500;
 }
 
-.fonctionnement-block_restaurant:hover {
+.fonctionnement-block .fonctionnement-steps__restaurant:hover {
   background-color: #e7daf5;
 }
 
-.fonctionnement-block_restaurant:hover span {
+.fonctionnement-block .fonctionnement-steps__restaurant:hover span {
   color: #9356DC;
 }
 
-.fonctionnement-block_restaurant::before {
+.fonctionnement-block .fonctionnement-steps__restaurant::before {
   content: "1";
   background-color: #9356DC;
   color: #fff;
@@ -280,7 +283,7 @@ body img {
   padding: 3px 7px;
 }
 
-.fonctionnement-block_menu {
+.fonctionnement-block .fonctionnement-steps__menu {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -295,7 +298,7 @@ body img {
           box-shadow: 3px 4px 6px #cecece;
 }
 
-.fonctionnement-block_menu span {
+.fonctionnement-block .fonctionnement-steps__menu span {
   -ms-flex-item-align: center;
       -ms-grid-row-align: center;
       align-self: center;
@@ -304,20 +307,20 @@ body img {
   font-size: 20px;
 }
 
-.fonctionnement-block_menu p {
+.fonctionnement-block .fonctionnement-steps__menu p {
   padding: 12px 25px;
   font-weight: 500;
 }
 
-.fonctionnement-block_menu:hover {
+.fonctionnement-block .fonctionnement-steps__menu:hover {
   background-color: #e7daf5;
 }
 
-.fonctionnement-block_menu:hover span {
+.fonctionnement-block .fonctionnement-steps__menu:hover span {
   color: #9356DC;
 }
 
-.fonctionnement-block_menu::before {
+.fonctionnement-block .fonctionnement-steps__menu::before {
   content: "2";
   background-color: #9356DC;
   color: #fff;
@@ -328,7 +331,7 @@ body img {
   padding: 3px 7px;
 }
 
-.fonctionnement-block_degustez {
+.fonctionnement-block .fonctionnement-steps__dégustez {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -343,7 +346,7 @@ body img {
           box-shadow: 3px 4px 6px #cecece;
 }
 
-.fonctionnement-block_degustez span {
+.fonctionnement-block .fonctionnement-steps__dégustez span {
   -ms-flex-item-align: center;
       -ms-grid-row-align: center;
       align-self: center;
@@ -352,20 +355,20 @@ body img {
   font-size: 20px;
 }
 
-.fonctionnement-block_degustez p {
+.fonctionnement-block .fonctionnement-steps__dégustez p {
   padding: 12px 25px;
   font-weight: 500;
 }
 
-.fonctionnement-block_degustez:hover {
+.fonctionnement-block .fonctionnement-steps__dégustez:hover {
   background-color: #e7daf5;
 }
 
-.fonctionnement-block_degustez:hover span {
+.fonctionnement-block .fonctionnement-steps__dégustez:hover span {
   color: #9356DC;
 }
 
-.fonctionnement-block_degustez::before {
+.fonctionnement-block .fonctionnement-steps__dégustez::before {
   content: "3";
   background-color: #9356DC;
   color: #fff;
@@ -501,7 +504,7 @@ body img {
 }
 
 body {
-  background-color: #f6f6f6;
+  background-color: #ffffff;
 }
 
 .left-arrow {
@@ -514,15 +517,13 @@ body {
 img {
   width: 100%;
   height: 50vh;
-  position: relative;
+  position: absolute;
   z-index: -1;
 }
 
 .main-restaurant {
   background-color: #f6f6f6;
-  position: relative;
-  bottom: 60px;
-  border-radius: 50px 50px 0 0;
+  border-radius: 40px 40px 0 0;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -530,24 +531,26 @@ img {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+  margin-top: 17.1em;
 }
 
 .main-restaurant .main-title {
-  padding-top: 30px;
+  padding-top: 36px;
+  position: relative;
 }
 
 .main-restaurant h2 {
   font-family: 'Shrikhand', cursive;
-  font-size: 1.6em;
+  font-size: 1.7em;
   font-weight: 500;
-  margin-left: 4%;
+  margin-left: 5%;
   margin-top: 0;
 }
 
 .main-restaurant .heart-block {
   position: absolute;
   right: 40px;
-  top: 32px;
+  top: 39px;
   display: inline-block;
   width: 25px;
   height: 25px;
@@ -588,14 +591,19 @@ img {
           transform: scale(1);
 }
 
-.main-restaurant h3 {
+.main-restaurant section {
+  margin-bottom: 13px;
+}
+
+.main-restaurant section h3 {
   margin-left: 4%;
   font-size: 1em;
   font-weight: normal;
   color: #3e3e3e;
+  margin-bottom: 20px;
 }
 
-.main-restaurant h3 .h3-border {
+.main-restaurant section h3 .h3-border {
   border-bottom: 3px solid #99E2D0;
 }
 
@@ -626,8 +634,8 @@ img {
   margin-bottom: 15px;
   border-radius: 15px;
   overflow: hidden;
-  -webkit-box-shadow: 3px 4px 6px #cecece;
-          box-shadow: 3px 4px 6px #cecece;
+  -webkit-box-shadow: 3px 3px 8px rgba(206, 206, 206, 0.7);
+          box-shadow: 3px 3px 8px rgba(206, 206, 206, 0.7);
   position: relative;
   cursor: pointer;
 }
@@ -760,11 +768,11 @@ img {
       -ms-grid-row-align: center;
       align-self: center;
   margin-top: 2.5em;
-  margin-bottom: 2.5em;
+  margin-bottom: 3.5em;
 }
 
 .main-restaurant .btn-center .btn {
-  padding: 0.8em 3em;
+  padding: 0.9em 2.9em;
 }
 
 header {
@@ -811,6 +819,80 @@ footer p i {
   font-size: 13px;
   width: 13px;
   padding-right: 8px;
+}
+
+@media screen and (min-width: 768px) {
+  .fonctionnement-steps {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
+    gap: 2em;
+  }
+  .fonctionnement-steps__restaurant::before {
+    bottom: 34px !important;
+  }
+  .fonctionnement-steps__menu::before {
+    bottom: 34px !important;
+  }
+  .fonctionnement-steps__dégustez::before {
+    bottom: 34px !important;
+  }
+  .restaurants-block {
+    border-radius: 40px 40px 0 0;
+  }
+  .card-container.card-container {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -webkit-box-pack: space-evenly;
+        -ms-flex-pack: space-evenly;
+            justify-content: space-evenly;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    height: auto;
+  }
+  .card-container.card-container .card {
+    width: calc(50% - 3em);
+    margin: 0 0 3em 0;
+  }
+  footer {
+    height: 140px;
+  }
+  footer .footer-logo {
+    text-align: center;
+    margin-bottom: 30px;
+  }
+  footer .link-container {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: space-evenly;
+        -ms-flex-pack: space-evenly;
+            justify-content: space-evenly;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+  .main-restaurant {
+    margin: 17.1em 5% 3% 5%;
+    border-radius: 40px;
+  }
+}
+
+@media screen and (min-width: 996px) {
+  .main-restaurant {
+    margin: 17.1em 5% 3% 5%;
+    border-radius: 40px;
+  }
+  .restaurants-block {
+    border-radius: 40px;
+    margin: 0 5% 4% 5%;
+  }
 }
 
 .btn {
