--- a/css/main.css
+++ b/css/main.css
@@ -521,6 +521,26 @@ body img {
           transform: scale(1);
 }
 
+.main-restaurant .menu-meal:nth-child(1) {
+  -webkit-animation: menu-appear 2s both;
+  animation: menu-appear 2s both;
+}
+
+.main-restaurant .menu-meal:nth-child(2) {
+  -webkit-animation: menu-appear 3s both;
+  animation: menu-appear 3s both;
+}
+
+.main-restaurant .menu-meal:nth-child(3) {
+  -webkit-animation: menu-appear 4s both;
+  animation: menu-appear 4s both;
+}
+
+.main-restaurant .menu-meal:nth-child(4) {
+  -webkit-animation: menu-appear 5s both;
+  animation: menu-appear 5s both;
+}
+
 .left-arrow {
   padding-top: 10px;
   position: absolute;
@@ -675,41 +695,6 @@ body img {
   cursor: pointer;
 }
 
-.main-restaurant .menu-meal:nth-child(1) {
-  -webkit-animation: menu-appear 2s both;
-          animation: menu-appear 2s both;
-  -webkit-animation-delay: 0.75s;
-          animation-delay: 0.75s;
-}
-
-.main-restaurant .menu-meal:nth-child(2) {
-  -webkit-animation: menu-appear 2s both;
-          animation: menu-appear 2s both;
-  -webkit-animation-delay: 0.60s;
-          animation-delay: 0.60s;
-}
-
-.main-restaurant .menu-meal:nth-child(3) {
-  -webkit-animation: menu-appear 2s both;
-          animation: menu-appear 2s both;
-  -webkit-animation-delay: 0.45s;
-          animation-delay: 0.45s;
-}
-
-.main-restaurant .menu-meal:nth-child(4) {
-  -webkit-animation: menu-appear 2s both;
-          animation: menu-appear 2s both;
-  -webkit-animation-delay: 0.30s;
-          animation-delay: 0.30s;
-}
-
-.main-restaurant .menu-meal:nth-child(5) {
-  -webkit-animation: menu-appear 2s both;
-          animation: menu-appear 2s both;
-  -webkit-animation-delay: 0.15s;
-          animation-delay: 0.15s;
-}
-
 .main-restaurant .menu-meal__check {
   background: #99E2D0;
   -ms-flex-item-align: center;
@@ -860,6 +845,7 @@ footer p i {
 @media screen and (min-width: 768px) {
   .left-arrow {
     visibility: hidden;
+    padding-top: 5px;
   }
   .left-arrow .index-link {
     visibility: visible;
